--- a/extension/src/pages/popup.html
+++ b/extension/src/pages/popup.html
@@ -7,7 +7,7 @@
 		<script type="text/javascript" src="../js/popup.js"></script>
 	</head>
 	<body>
-		<h1>eLaser</h1>
+		<h1>Bionic Lazer</h1>
 		<h3>Pew pew</h3>
 
 		<h2 id="id"></h2>
